# group-prac

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  compile_commands.json  flake.nix  main.cpp
.cache/clangd/index/: main.cpp.9E0288E63E3AA5C7.idx
backend/include/: Cargo.h  Crane.h  Ship.h  Time.h  counter.h
backend/src/: counter.cpp  main.cpp
frontend/: main.qml
qml/: main.qml
